--- a/finalterm_socialnetwork/package.json
+++ b/finalterm_socialnetwork/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "antd": "^3.10.9",
+    "axios": "^0.18.0",
+    "base32.js": "^0.1.0",
+    "crypto": "^1.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
@@ -12,7 +15,9 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "stellar-base": "^0.9.0",
+    "varstruct": "^6.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
