--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "moment": "^2.23.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-confirm-alert": "^2.0.7",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
