--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "reactjs-popup": "^1.3.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "stellar-base": "^0.9.0",
