--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.0",
     "base32.js": "^0.1.0",
     "crypto": "^1.0.1",
+    "crypto-js": "^3.1.9-1",
     "moment": "^2.23.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
